--- a/casino.html
+++ b/casino.html
@@ -2,66 +2,90 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Juju Casino</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Juju Casino</title>
   <style>
     body {
       background-color: #111;
       color: white;
       font-family: 'Arial', sans-serif;
-      text-align: center;
-      padding: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      flex-direction: column;
     }
 
     h1 {
       font-size: 48px;
-      color: #f0f0f0;
-      margin-bottom: 30px;
+      margin-bottom: 40px;
     }
 
-    .button-container {
+    .tiles-container {
       display: flex;
       justify-content: center;
-      flex-direction: column;
-      gap: 20px;
+      gap: 30px;
+      flex-wrap: wrap;
     }
 
-    .button-container a {
-      display: inline-block;
-      padding: 15px 25px;
-      font-size: 20px;
-      color: white;
+    .tile {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
       background-color: #444;
-      border-radius: 10px;
-      text-decoration: none;
-      transition: background-color 0.3s ease;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 20px;
+      font-weight: bold;
+      color: white;
+      cursor: pointer;
+      transition: transform 0.3s ease, background-color 0.3s ease;
+      user-select: none;
     }
 
-    .button-container a:hover {
+    .tile:hover {
+      transform: translateY(-10px);
       background-color: #0f0;
     }
 
-    .footer {
-      margin-top: 50px;
-      color: #aaa;
-      font-size: 14px;
+    .tile:active {
+      transform: translateY(5px);
+      background-color: #0c0;
     }
+
+    .tile span {
+      transition: opacity 0.3s ease;
+    }
+
+    .tile:hover span {
+      opacity: 1;
+    }
+
+    .tile span.hidden {
+      opacity: 0;
+    }
+
   </style>
 </head>
 <body>
 
   <h1>Welcome to Juju Casino</h1>
-  <p>Select a Game to Play</p>
 
-  <!-- Navigation buttons for the games -->
-  <div class="button-container">
-    <a href="/mines.html">🎮 Mines</a>
-    <a href="/casebattles.html">🎲 Case Battles</a>
-    <a href="/dice.html">🎲 Dice Duel</a>
-  </div>
-
-  <div class="footer">
-    <p>If you encounter any issues, please contact support.</p>
+  <div class="tiles-container">
+    <!-- Mines Tile -->
+    <div class="tile" onclick="window.location.href='/mines.html'">
+      <span class="hidden">Mines</span>
+    </div>
+    <!-- Case Battles Tile -->
+    <div class="tile" onclick="window.location.href='/casebattles.html'">
+      <span class="hidden">Case Battles</span>
+    </div>
+    <!-- Slots Tile -->
+    <div class="tile" onclick="window.location.href='/slots.html'">
+      <span class="hidden">Slots</span>
+    </div>
   </div>
 
 </body>
