--- a/casino.html
+++ b/casino.html
@@ -13,7 +13,6 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      margin: 0;
       flex-direction: column;
     }
 
@@ -74,10 +73,6 @@
   <h1>Welcome to Juju Casino</h1>
 
   <div class="tiles-container">
-    <!-- Mines Tile -->
-    <div class="tile" onclick="window.location.href='/mines.html'">
-      <span class="hidden">Mines</span>
-    </div>
     <!-- Case Battles Tile -->
     <div class="tile" onclick="window.location.href='/casebattles.html'">
       <span class="hidden">Case Battles</span>
@@ -85,6 +80,10 @@
     <!-- Slots Tile -->
     <div class="tile" onclick="window.location.href='/slots.html'">
       <span class="hidden">Slots</span>
+    </div>
+    <!-- Blackjack Tile -->
+    <div class="tile" onclick="window.location.href='/blackjack.html'">
+      <span class="hidden">Blackjack</span>
     </div>
   </div>
 
