--- a/casino.html
+++ b/casino.html
@@ -1,91 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Juju Casino</title>
-  <style>
-    body {
-      background-color: #111;
-      color: white;
-      font-family: 'Arial', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      flex-direction: column;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Casino Games</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #1a1a1a;
+            color: #fff;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
 
-    h1 {
-      font-size: 48px;
-      margin-bottom: 40px;
-    }
+        header {
+            background-color: #333;
+            padding: 20px;
+        }
 
-    .tiles-container {
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      flex-wrap: wrap;
-    }
+        header h1 {
+            font-size: 2.5em;
+        }
 
-    .tile {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      background-color: #444;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 20px;
-      font-weight: bold;
-      color: white;
-      cursor: pointer;
-      transition: transform 0.3s ease, background-color 0.3s ease;
-      user-select: none;
-    }
+        .game-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 50px;
+        }
 
-    .tile:hover {
-      transform: translateY(-10px);
-      background-color: #0f0;
-    }
+        .game {
+            background-color: #444;
+            border-radius: 10px;
+            padding: 20px;
+            width: 200px;
+            text-align: center;
+        }
 
-    .tile:active {
-      transform: translateY(5px);
-      background-color: #0c0;
-    }
+        .game img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
 
-    .tile span {
-      transition: opacity 0.3s ease;
-    }
+        .game h2 {
+            font-size: 1.5em;
+            margin-top: 10px;
+        }
 
-    .tile:hover span {
-      opacity: 1;
-    }
+        .game p {
+            font-size: 1.1em;
+            margin-top: 10px;
+        }
 
-    .tile span.hidden {
-      opacity: 0;
-    }
-
-  </style>
+        footer {
+            background-color: #333;
+            padding: 10px;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
 
-  <h1>Welcome to Juju Casino</h1>
+<header>
+    <h1>Welcome to the Casino</h1>
+</header>
 
-  <div class="tiles-container">
-    <!-- Case Battles Tile -->
-    <div class="tile" onclick="window.location.href='/casebattles.html'">
-      <span class="hidden">Case Battles</span>
+<div class="game-container">
+    <!-- Blackjack Game -->
+    <div class="game">
+        <img src="https://rollbet.gg/img/blackjack.a095a5a2.png" alt="Blackjack">
+        <h2>Blackjack</h2>
+        <p>Try your luck in Blackjack and beat the dealer!</p>
+        <button>Play Blackjack</button>
     </div>
-    <!-- Slots Tile -->
-    <div class="tile" onclick="window.location.href='/slots.html'">
-      <span class="hidden">Slots</span>
+
+    <!-- Slots Game -->
+    <div class="game">
+        <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/..." alt="Slots">
+        <h2>Slots</h2>
+        <p>Spin the reels and hit the jackpot!</p>
+        <button>Play Slots</button>
     </div>
-    <!-- Blackjack Tile -->
-    <div class="tile" onclick="window.location.href='/blackjack.html'">
-      <span class="hidden">Blackjack</span>
-    </div>
-  </div>
+</div>
+
+<footer>
+    <p>&copy; 2025 Casino Games. All Rights Reserved.</p>
+</footer>
 
 </body>
 </html>
