--- a/casino.html
+++ b/casino.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Case Battles - Casino</title>
+    <title>Case Battles - Fight for Loot!</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -51,30 +51,6 @@
             margin-top: 10px;
         }
 
-        .case-item.selected {
-            background-color: #28a745;
-        }
-
-        .case-item.selected img {
-            border: 2px solid #fff;
-        }
-
-        .battle-info {
-            background-color: #333;
-            padding: 20px;
-            margin-top: 30px;
-            border-radius: 10px;
-        }
-
-        .battle-info h3 {
-            font-size: 1.8em;
-            margin-bottom: 20px;
-        }
-
-        .battle-info p {
-            font-size: 1.2em;
-        }
-
         .loot-table {
             display: none;
             background-color: #444;
@@ -84,11 +60,6 @@
             text-align: left;
             width: 80%;
             margin: 0 auto;
-        }
-
-        .loot-table h3 {
-            font-size: 1.6em;
-            margin-bottom: 10px;
         }
 
         .loot-item {
@@ -189,13 +160,12 @@
     <div class="loot-item"><img src="https://static.rbxgold.com/cases/juicer-case.png" alt="Loot"> 16,000 Green Wistful Wink - 1% Drop Rate</div>
     <div class="loot-item"><img src="https://static.rbxgold.com/cases/juicer-case.png" alt="Loot"> 15,000 Blue Wistful Wink - 1% Drop Rate</div>
     <div class="loot-item"><img src="https://static.rbxgold.com/cases/juicer-case.png" alt="Loot"> 15,000 Purple Wistful Wink - 1% Drop Rate</div>
-    <!-- Add more loot items as needed -->
 </div>
 
-<!-- Add loot tables for other cases in the same format as above -->
+<!-- Loot tables for other cases would go here -->
 
 <footer>
-    <p>Casino &copy; 2025 - All rights reserved.</p>
+    <p>Case Battles &copy; 2025 - All rights reserved.</p>
 </footer>
 
 <script>
